--- a/index.html
+++ b/index.html
@@ -5,45 +5,70 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mike Vibert</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Link to Googlefonts - importing roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="./style/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Rubik&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="/style/style-one.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <!-- main body start -->
-  <body>        
-    <!-- <header> -->
-      <nav>
-        <img src="./images/mikevibert.png" alt="michael Vibert logo">
-        <div id="link-list">
-          <ul>
-            <li><a href="/">Blog</li></a>
-            <li><a href="/">Projects</li></a>
-            <li><a href="/">Contact Me</li></a> 
-          </ul>
+
+  <body>
+    <header>
+      <!-- <div class="line-charcoal"></div> -->
+      <!-- <div class="line-skobelof"></div> -->
+
+      <div class="header-shell">
+        <div class="image-box">
+          <img src="/images/mikevibert.png" alt="mike vibert's main sit./home.html logo">
         </div>
-      </nav>
-        
-    <!-- </header> -->
+        <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
+        <label id="hamburger-menu" for="button-check"> <!-- label required to reference input (for="button-chek") -->
+          <div id="div-1"></div>
+          <div id="div-2"></div>
+          <div id="div-3"></div>
+        </label>
+          <nav class="sidebar-menu">
+            <ul class="menu">
+              <h2><label for="button-check">
+                <i>&#8620</i>
+              </label></h2>
+              <h2>Menu</h2>
+              <li><a href="./home.html">Home</a></li>
+              <li><a href="./home.html">Projects</a></li>
+              <li><a href="./home.html">Blog</a></li>
+              <li><a href="./home.html">About Me</a></li>
+              <li><a href="./home.html">Contact Me</a></li>
+            </ul>
+          </nav>
+      </div>
+      <!-- <div class="line-skobelof""></div> -->
+      <div class="line-charcoal"></div>
+  </header>
+
     <main>
-      <section class="first-section"></section>
-      <h4 class="pre-heading"><b>Welcome to my playground</b></h3>
-      <div class="welcome">
-        <h1 class="welcome-heading-one"><big>The road to becoming</big></h1>
-        <h1 class="welcome-heading-two" style="padding: 0;">an excellent dev, begins.</big></h1>
-        <p class="intro-para">Hi, I'm Mike Vibert. Current bootcamp student at Coder Academy. <br>
-        I have a deep passion for creating fun, interactive & useful tools. 
-        </p>
-        <a href="/"><button id="cta-button" type="submit"> Download Resume</button></a>
-      </div>      
-    </main>  
-      <!-- footer start -->
+      <section class="welcome-text">
+        <h1><big><b>Mike V. On course</b></big></h1>
+        <p>towards software <br> deveveloper, begins...</p></section>
+      </main>
+
     <footer>
-      <h5>Copyright&copy; mike vibert 2066</h5>
-    </footer>
-    <!-- footer end -->
+      <div class="social-links">
+        <button>
+          <a href="./home.html"><i style="color: #64FFDA;" class="fa fa-twitter"></i></a>
+        </button>
+        <button>
+          <a href="./home.html"></a><i class="fa fa-github"></i></a>
+        </button>
+        <button>
+          <a href="//home.html"></a><i class="fa fa-facebook-f"></i></a>
+        </button>
+      </div>
+
+        <section>
+          MIKE VIBERT &copy <span style="color: #8D0B0B">2022</span>
+        </section>
+    </footer>   
   </body>
-    <!-- Main body finish -->
 </html>
