problems with merging

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- <div class="line-skobelof""></div> -->
       <div class="line-charcoal"></div>
   </header>
-
+  <!-- extaneous comment -->
     <main>
       <section class="welcome-text">
         <h1><big><b>Mike V. On course</b></big></h1>
