added a picture and a few elements into the intro section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="header-shell">
         <div class="image-box">
           <!-- <img src="/images/mikevibert.png" alt="mike vibert's main sit./home.html logo"> -->
-          <p class="logo-text"><i class="fa fa-code"></i><br>mike<b style="font-size: 30px; color: grey">Vibert</b></p>
+          <p class="logo-text"><i class="fa fa-code"></i><br>mike<b style="font-size: 23px; color: grey">V</b></p>
         </div>
         <div class="menu-shell">
         <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
@@ -60,9 +60,19 @@
   </header>
   <!-- extaneous comment -->
     <main>
-      <section class="welcome-text">
-        <h1><big><b>Mike V. On course</b></big></h1>
-        <p>towards software <br> deveveloper, begins...</p></section>
+      <div class="intro-container">
+        <section class="welcome-txt" >
+          <p>Hi! My name is</p>
+          <h1>Mike Vibert.</b></h1>
+          <p id="tagline">the journey towards software <br>deveveloper, begins!</p>
+        </section>
+        
+      </div>
+      <div class="pic-shell">
+        <section class="mike-pic-container">
+          <img src="./images/Mike.jpg" alt="Picture of micke vibert">
+        </section>
+      </div>
       </main>
 
     <footer>
