Added to the template for site, changed desktop navbar styling and flexbox

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -44,7 +44,7 @@
             <ul>
               <li><a href="/"><div class="nav-link-hover"><small>1. </small>Home</div></li>
               <li><a href="/"><div class="nav-link-hover"><small>2. </small>Projects</a></li>
-              <li><a href="pages/blog.html"><div class="nav-link-hover"><small>3. </small>Blog</a></li>
+              <li><a href="./pages/blog.html"><div class="nav-link-hover"><small>3. </small>Blog</a></li>
               <li><a href="/"><div class="nav-link-hover"><small>4. </small>About Me</a></li>
               <li><a href="/"><div class="nav-link-hover"><small>5. </small>Contact Me</a></li>
             </ul>
@@ -56,15 +56,12 @@
     <main>
       <div class="intro-container">
         <section class="welcome-txt" >
-          <p>Hi! My name is</p>
-          <h1>Mike Vibert.</b></h1>
-          <p id="tagline">the journey towards software <br>deveveloper, begins!</p>
+          <p>BLOG</p>
         </section>
         
       </div>
-      <div class="pic-shell">
+      <div>
         <section class="mike-pic-container">
-          <img src="./images/Mike.jpg" alt="Picture of micke vibert">
         </section>
       </div>
       <div class="div-2">
