Rafactoring in a major way. Only part done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Rubik&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="/style/style-one.css">
+    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="/style/pages/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
@@ -49,11 +50,11 @@
           <!-- the navigation option display for a desktop or laptop veiw -->
           <nav class="desktop-menu">
             <ul>
-              <li><a href="/index.html"><div class="nav-link-hover"><small>1. </small>Home</div></li>
-              <li><a href="./pages/projects.html"><div class="nav-link-hover"><small>2. </small>Projects</a></li>
-              <li><a href="./pages/blog.html"><div class="nav-link-hover"><small>3. </small>Blog</a></li>
-              <li><a href="./pages/aboutme.html"><div class="nav-link-hover"><small>4. </small>About Me</a></li>
-              <li><a href="./pages/contact.html"><div class="nav-link-hover"><small>5. </small>Contact Me</a></li>
+              <li><a href="/index.html"><div class="nav-link-hover">Home</div></li>
+              <li><a href="./pages/projects.html"><div class="nav-link-hover">Projects</a></li>
+              <li><a href="./pages/blog.html"><div class="nav-link-hover">Blog</a></li>
+              <li><a href="./pages/aboutme.html"><div class="nav-link-hover">About Me</a></li>
+              <li><a href="./pages/contact.html"><div class="nav-link-hover">Contact Me</a></li>
             </ul>
           </nav>
         </div>
