footer alingment and styling for all pages, ready for main content

--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@
         <h3>Heading for Section</h3>
         </section>
       </div>
+      <div class="intro-container">
+        <section class="welcome-txt" >
+          <p>Hi! My name is</p>
+          <h1>Mike Vibert.</b></h1>
+          <p id="tagline">the journey towards software <br>deveveloper, begins!</p>
+        </section>
+        
+      </div>
+      <div class="pic-shell">
+        <section class="mike-pic-container">
+          <img src="./images/Mike.jpg" alt="Picture of micke vibert">
+        </section>
+      </div>
+      <div class="div-2">
+        <p>SOME TEXT SUPER COOL</p>
+        <h3>Heading for Section</h3>
+        </section>
+      </div>
       </main>
 
     <footer>
