working on projects page with little success!

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <section><img src="./images/mongodb-logo.png" alt="Mongo DB Symbol"> <!-- https://freebiesupply.com/?s=mongo+db -->
             <p>this is some txt about flask</p></section>
         </ul>
-
+<!-- picture of mike vibert and a blurb about me -->
         <div class="pic-shell">
           <section class="mike-pic-container">
             <img src="./images/mike-square.jpg" alt="Picture of mick vibert">
