--- a/pages/projects.html
+++ b/pages/projects.html
@@ -63,21 +63,27 @@
   <!-- Main section of the page -->
     <main>
       <div class="intro-container">
+        <!-- intro and title section -->
         <section class="welcome-txt" >
-          <p>BLOG</p>
+          <p>This is where I have my fun:</p>
+          <h1 id="name-headline"><big>Projects.</big></h1>
+          <p id="tagline">Let's get creative.<br>Check out some of my best work.</p>
         </section>
+      </div>
+
+      <div class="container">
         
+        <div class="box">
+          <div class="imgbox">
+            <img src="../images/chatapp.jpg" alt="">
+          </div>
+          <div class="content">
+            <h3>ChatApp</h3>
+            <article>Some information about my ChatApyy</article>
+          </div>
+        </div>
       </div>
-      <div>
-        <section class="mike-pic-container">
-        </section>
-      </div>
-      <div class="div-2">
-        <p>SOME TEXT SUPER COOL</p>
-        <h3>Heading for Section</h3>
-        </section>
-      </div>
-      </main>
+    </main>
 <!-- footer begins here, include my socials and a copywrite -->
     <footer>
       <div class="social-links">
