added blog page with links to blop post pages and linked logo to home/index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <header>
       <div class="header-shell">
         <div class="image-box">
-         <img id="mike-logo" src="./images/logo3.png" alt="logo for mike.v"> 
+          <a href="/index.html">
+            <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"></a> 
         </div>
         <div class="menu-shell">
         <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
@@ -65,7 +66,7 @@
           <h1 id="name-headline"><big>Mike Vibert.</big></h1>
           <h1 id="title-headline">Student Developer</h1>
           <p id="tagline">Current bootcamp student at Coder<br>Academy. I have a deep passion for<br>creating fun, interactive & useful tools.</p>
-        <button class="green-text-bg-none" type="submit">Check out my projects!</button>
+        <a href="./pages/projects.html"><button class="green-text-bg-none" type="submit">Check out my projects!</button></a>
         </section>
         
       </div>
