--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -22,7 +22,8 @@
     <header>
       <div class="header-shell">
         <div class="image-box">
-          <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"> 
+          <a href="/index.html">
+            <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"></a> 
          </div>
          <div class="menu-shell">
          <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
