--- a/pages/projects.html
+++ b/pages/projects.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Rubik&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/style/main.css"> <!-- link to my stylesheet in the style folder -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
 <!-- Body starts here - containing everything the user will see -->
   <body>
@@ -22,7 +23,8 @@
     <header>
       <div class="header-shell">
         <div class="image-box">
-         <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"> 
+          <a href="/index.html">
+            <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"></a>  
         </div>
         <div class="menu-shell">
         <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
@@ -85,6 +87,7 @@
         </div>
 <!-- Chat app project mock up -->
         <div class="container">
+
           <img src="../images/chatapp.jpg" alt="" class="image">
           <div class="overlay">
             <div class="text">
