Contact page layout done, added jquery for slide effect on projects

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -64,20 +64,40 @@
   <!-- Main section of the page -->
     <main>
       <div class="intro-container">
+        <!-- intro and title section -->
         <section class="welcome-txt" >
-          <p>BLOG</p>
-        </section>
-        
-      </div>
-      <div>
-        <section class="mike-pic-container">
+          <p>Get in touch, I'd love to connect</p>
+          <h1 id="name-headline"><big>Contact Me.</big></h1>
         </section>
       </div>
-      <div class="div-2">
-        <p>SOME TEXT SUPER COOL</p>
-        <h3>Heading for Section</h3>
+      <div class="main-content-shell">
+        <!-- contact form starts here -->
+        <section id="form-shell">
+          <form action="/">
+  
+            <div id="name-email-message-shell">
+              <label for="name-input" id="name-label">Name:</label>
+              <input type="text" id="name-input" placeholder="Enter your name..">
+  
+              <label for="email-input" id="email-label">Email:</label>
+              <input type="email" id="email-input" placeholder="Enter your contact email..">
+  
+              <label for="message-input" id="message-label">Message:</label>
+              <textarea id="message-input" placeholder="Write me a message :)"></textarea>
+              <button type="submit">Submit</button>
+            </div>
+          </form>
+  <!-- end of contact form -->
         </section>
+  
+        <div class="resume-btn-shell">
+          <h3></h3>
+          <img src="../images/mike-square.jpg" alt="Picture of mike vibert">
+          <button class="green-text-bg-none">Download Resume</button>
+          <p>Ramps yes plz hella praxis pop-up man bun messenger bag vegan pitchfork. Palo santo fixie typewriter, authentic craft beer praxis iPhone edison bulb</p>
+        </div>
       </div>
+
       </main>
 <!-- footer begins here, include my socials and a copywrite -->
     <footer>
