--- a/pages/projects.html
+++ b/pages/projects.html
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Rubik&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/style/main.css"> <!-- link to my stylesheet in the style folder -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="../scripts/jquery-functions.js"></script>
   </head>
 <!-- Body starts here - containing everything the user will see -->
   <body>
