--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Browser page title -->
-    <title>MV Projects</title>
+    <title>Projects</title>
     <!-- veiwport setting that help to make the html responsive to varying screen sizes -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Hyperlinks to font repositry, and icon repositry -->
@@ -25,7 +25,7 @@
       <div class="header-shell">
         <div class="image-box">
           <a href="/index.html">
-            <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"></a>  
+            <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"></a> 
         </div>
         <div class="menu-shell">
         <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
@@ -52,11 +52,11 @@
           <!-- the navigation option display for a desktop or laptop veiw -->
           <nav class="desktop-menu">
             <ul>
-              <li><a href="/index.html"><div class="nav-link-hover">Home</div></li>
-              <li><a href="./pages/projects.html"><div class="nav-link-hover">Projects</a></li>
-              <li><a href="./pages/blog.html"><div class="nav-link-hover">Blog</a></li>
-              <li><a href="./pages/aboutme.html"><div class="nav-link-hover">About Me</a></li>
-              <li><a href="./pages/contact.html"><div class="nav-link-hover">Contact Me</a></li>
+              <li><a href="../index.html"><div class="nav-link-hover">Home</div></li>
+              <li><a href="./projects.html"><div class="nav-link-hover">Projects</a></li>
+              <li><a href="./blog.html"><div class="nav-link-hover">Blog</a></li>
+              <li><a href="./aboutme.html"><div class="nav-link-hover">About Me</a></li>
+              <li><a href="./contact.html"><div class="nav-link-hover">Contact Me</a></li>
             </ul>
           </nav>
         </div>
