--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Browser page title -->
-    <title>Mike Vibert</title>
+    <title>Contact</title>
     <!-- veiwport setting that help to make the html responsive to varying screen sizes -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Hyperlinks to font repositry, and icon repositry -->
@@ -23,18 +23,17 @@
       <div class="header-shell">
         <div class="image-box">
           <a href="/index.html">
-            <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"></a>  
-         </div>
-         <div class="menu-shell">
-         <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
-           <label id="hamburger-menu" for="button-check"> <!-- label required to reference input (for="button-chek") -->
-             <svg width="80" height="224" viewBox="0 0 350 224" fill="none" xmlns="http://www.w3.org/2000/svg">
-               <line id="top" x1="12" y1="12" x2="338" y2="12" stroke="black" stroke-width="24" stroke-linecap="round"/>
-               <line id="middle" x1="12" y1="112" x2="338" y2="112" stroke="black" stroke-width="24" stroke-linecap="round"/>
-               <line id="bottom" x1="12" y1="212" x2="338" y2="212" stroke="black" stroke-width="24" stroke-linecap="round"/>
-             </svg>
-           </label>
-          <!-- This is the menu the pops out of the side screen when teh hamburger is clicked -->
+            <img id="mike-logo" src="../images/logo3.png" alt="logo for mike.v"></a> 
+        </div>
+        <div class="menu-shell">
+        <input type="checkbox" id="button-check"> <!-- checkbox that is used to switch hamburger to nav menu -->
+          <label id="hamburger-menu" for="button-check"> <!-- label required to reference input (for="button-chek") -->
+            <svg width="80" height="224" viewBox="0 0 350 224" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <line id="top" x1="12" y1="12" x2="338" y2="12" stroke="black" stroke-width="24" stroke-linecap="round"/>
+              <line id="middle" x1="12" y1="112" x2="338" y2="112" stroke="black" stroke-width="24" stroke-linecap="round"/>
+              <line id="bottom" x1="12" y1="212" x2="338" y2="212" stroke="black" stroke-width="24" stroke-linecap="round"/>
+            </svg>
+          </label>
           <nav class="sidebar-menu">
             <ul class="menu">
               <h2><label for="button-check">
@@ -51,11 +50,11 @@
           <!-- the navigation option display for a desktop or laptop veiw -->
           <nav class="desktop-menu">
             <ul>
-              <li><a href="/index.html"><div class="nav-link-hover"><small>1. </small>Home</div></li>
-              <li><a href="./projects.html"><div class="nav-link-hover"><small>2. </small>Projects</a></li>
-              <li><a href="./blog.html"><div class="nav-link-hover"><small>3. </small>Blog</a></li>
-              <li><a href="./aboutme.html"><div class="nav-link-hover"><small>4. </small>About Me</a></li>
-              <li><a href="./contact.html"><div class="nav-link-hover"><small>5. </small>Contact Me</a></li>
+              <li><a href="../index.html"><div class="nav-link-hover">Home</div></li>
+              <li><a href="./projects.html"><div class="nav-link-hover">Projects</a></li>
+              <li><a href="./blog.html"><div class="nav-link-hover">Blog</a></li>
+              <li><a href="./aboutme.html"><div class="nav-link-hover">About Me</a></li>
+              <li><a href="./contact.html"><div class="nav-link-hover">Contact Me</a></li>
             </ul>
           </nav>
         </div>
