90% finished about me page

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -69,6 +69,8 @@
           <h1 id="name-headline"><big>About Me.</big></h1>
         </section>
       </div>
+      <!-- Text and image above the white section -->
+      <div class="above-line">
         <article class="text-one">
           <p>Hello, I’m Michael and I enjoy making seamless, friction free and aesthetic 
             places for people to chill out or get things done. My interest in coding started
@@ -80,19 +82,25 @@
         <div class="img-div">
           <img src="../images/Me-riding-bike.jpg" alt="Mike riding a bike in a race">
         </div>
-      <!-- second seciton of the page/what background -->
-      <div>
-        <section class="mike-pic-container">
-        </section>
+
       </div>
+      <!-- second seciton of the page/white background -->
       <div class="div-2">
         <article class="text-two">
-          <p>
+          <p><b>
             Currently I’m studying Full Stack Web Development at Coder Academy. 
             Just prior to that I was studying Cyber Security at UNSW, Computer 
             Science at Monash and CyberSec/Networking at MIT.
+          </p></b>
+          <!-- <br> -->
+          <p>
+            In my previous life I was a practicing Chiropractor registered with 
+            APRHA. After 8 years of serving the community and running my own 
+            small business I made the big decision and follow my passion in 
+            Tech. 
           </p>
-          <br>
+        </article>
+        <article class="text-three">
           <p>My current fascinations include:</p>
           <div id="lists">
             <ul id="list-one">
@@ -114,7 +122,10 @@
             DIY renovation madness! 
           </p>
         </article>
+          
+        
       </div>
+      <!-- button to take you to contact page -->
       <div class="cta">
         <a href="./contact.html">
           <button class="green-text-bg-none">Get in Touch</button>
