Modified images in home page and added text

--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
         <h3><u>What I'm About</u></h3>
         <!-- skills icon pics list -->
         <ul class="skills-icons">
-          <section><img src="./images/react-logo.png" alt="React Symbol"> <!-- https://freebiesupply.com/logos/react-logo/ -->
-            <p>this is some txt about react</p>
+            <section><h5>React</h5><img src="./images/react-logo.png" alt="React Symbol"> <!-- https://freebiesupply.com/logos/react-logo/ -->
+            <p>The most powerful UI Javascript library</p>
           </section>
-          <section><img src="./images/python-logo.png" alt="Python Symbol"> <!-- https://freebiesupply.com/logos/python-logo/ -->
-            <p>this is some txt about python</p>
+          <section><h5>Python</h5><img src="./images/python-logo.png" alt="Python Symbol"> <!-- https://freebiesupply.com/logos/python-logo/ -->
+            <p>A flexible modern development tool</p>
           </section>
-          <section><img src="./images/flask-logo.png" alt="Flask Symbol"> <!-- https://freebiesupply.com/logos/flask-logo/ -->
-            <p>this is some txt about flask</p>
+          <section><h5>NodeJS</h5><img src="./images/node-js-logo.png" alt="Flask Symbol"> <!-- https://freebiesupply.com/logos/flask-logo/ -->
+            <p>Backend Javascript powerhouse</p>
           </section>
-          <section><img src="./images/mongodb-logo.png" alt="Mongo DB Symbol"> <!-- https://freebiesupply.com/?s=mongo+db -->
-            <p>this is some txt about flask</p></section>
+          <section><h5>MongoDB</h5><img src="./images/mongodb-logo.png" alt="Mongo DB Symbol"> <!-- https://freebiesupply.com/?s=mongo+db -->
+            <p>The noSQL solution to dynamic data storage</p></section>
         </ul>
 <!-- picture of mike vibert and a blurb about me -->
         <div class="pic-shell">
@@ -94,8 +94,10 @@
         </div>
         <article id="check-me-out">
           <h3><u>Who am I?</u></h3>
-          <P>This is some awesome text about me, it introduces me briefly
-             and lets people know what I'm basically about! How awesome.</P>
+          <P>I'm a big believer in building tools that make the world a 
+            better place. I enjoy solving complex problems and creating 
+            amazing experiences for users for all things tech.  
+            </P>
         </article>    
 
         <section id="special-interests">
