created blog post - OAuth attacks

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -73,7 +73,7 @@
         </section>
       </div>
 <!-- projects flexbox container starts here -->
-      <div class="projects-shell">
+      <div class="gallery-shell">
 <!-- Skate shop project mockup -->
         <div class="container">
           <img src="../images/skate-shop.png" alt="" class="image">
